full javafx rewrite.